# handlebars-iron

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  search-index.js  settings.html  source-files.js
examples/: compress.rs  error.rs  server.rs  watch_server.rs
examples/templates/: index.hbs
examples/templates/some/path/: hello.hbs
handlebars_iron/: all.html  index.html  sidebar-items.js  struct.DirectorySource.html  struct.HandlebarsEngine.html  struct.MemorySource.html  struct.SourceError.html  struct.Template.html  trait.Source.html
handlebars_iron/middleware/: struct.HandlebarsEngine.html  struct.Template.html
handlebars_iron/source/: struct.SourceError.html  trait.Source.html
handlebars_iron/sources/directory/: struct.DirectorySource.html
handlebars_iron/sources/memory/: struct.MemorySource.html
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/handlebars_iron/: trait.Source.js
implementors/iron/middleware/: trait.AfterMiddleware.js
implementors/modifier/: trait.Modifier.js
implementors/plugin/: trait.Plugin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/typemap/: trait.Key.js
src/: lib.rs  middleware.rs  source.rs  watch.rs
src/handlebars_iron/: lib.rs.html  middleware.rs.html  source.rs.html
src/handlebars_iron/sources/: directory.rs.html  memory.rs.html  mod.rs.html
src/sources/: directory.rs  memory.rs  mod.rs
tests/: test.rs
