[package]

name = "handlebars-iron"
version = "0.23.1"
authors = ["Ning Sun <sunng@about.me>"]
description = "Handlebars templating middleware for Iron."
license = "MIT"
keywords = ["handlebars", "templating", "web", "webdev", "iron"]
homepage = "https://github.com/sunng87/handlebars-iron"
repository = "https://github.com/sunng87/handlebars-iron"
documentation = "http://sunng87.github.io/handlebars-iron/"
readme = "README.md"

[dependencies]

iron = "^0.5.0"
#handlebars = { path = "../handlebars", default-features = false }
handlebars = { version = "^0.25.0", default-features = false }
rustc-serialize = { version = "^0.3.16", optional = true }
serde = { version = "^0.9.0", optional = true }
serde_json = { version = "^0.9.0", optional = true }
plugin = "^0.2.6"
notify = { version = "^3.0", optional = true }
log = "^0.3"
walkdir = "^1.0"
serde_derive = { version = "^0.9.0", optional = true }


[features]
default = ["handlebars/default", "rustc-serialize"]
watch = ["notify"]
serde_type = ["handlebars/serde_type", "serde", "serde_json"]
partial_legacy = ["handlebars/partial_legacy"]
unstable = ["serde_type", "serde_derive"]

[dev-dependencies]
env_logger = "^0.3.2"
maplit = "^0.1.3"
router = "^0.5.0"

[package.metadata.release]
sign-commit = true
upload-doc = true
