[package]

name = "handlebars-iron"
version = "0.25.1-pre"
authors = ["Ning Sun <sunng@about.me>"]
description = "Handlebars templating middleware for Iron."
license = "MIT"
keywords = ["handlebars", "templating", "web", "webdev", "iron"]
homepage = "https://github.com/sunng87/handlebars-iron"
repository = "https://github.com/sunng87/handlebars-iron"
documentation = "https://docs.rs/handlebars-iron/"
readme = "README.md"

[dependencies]

iron = "^0.5.0"
#handlebars = { path = "../handlebars", default-features = false }
handlebars = "^0.28.1"
serde = "^1.0.0"
serde_json = "^1.0.0"
plugin = "^0.2.6"
notify = { version = "^3.0", optional = true }
log = "^0.3"
walkdir = "^1.0"


[features]
watch = ["notify"]

[dev-dependencies]
serde_derive = "^1.0.0"
env_logger = "^0.3.2"
maplit = "^0.1.3"
router = "^0.5.0"
flate2 = "0.2"

[package.metadata.release]
sign-commit = true
upload-doc = true
