[package]

name = "handlebars-iron"
version = "0.29.1-alpha.0"
authors = ["Ning Sun <sunng@about.me>"]
description = "Handlebars templating middleware for Iron."
license = "MIT"
keywords = ["handlebars", "templating", "web", "webdev", "iron"]
homepage = "https://github.com/sunng87/handlebars-iron"
repository = "https://github.com/sunng87/handlebars-iron"
documentation = "https://docs.rs/handlebars-iron/"
readme = "README.md"

[dependencies]

iron = "^0.6.0"
#handlebars = { path = "../handlebars" }
handlebars = { version = "^3.0", features = ["dir_source"] }
serde = "^1.0.0"
serde_json = "^1.0.0"
plugin = "^0.2.6"
notify = { version = "^4.0", optional = true }
log = "^0.4"

[features]
watch = ["notify"]

[dev-dependencies]
serde_derive = "^1.0.0"
env_logger = "^0.4.1"
maplit = "^1.0.0"
router = "^0.6.0"
flate2 = "0.2"

[package.metadata.release]
sign-commit = true
pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"}, {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"} ]
